[workspace.package]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "common", 
    "liblzma", 
    "lzmainfo", 
    "utxz_sys",
    "utxz", 
    "xzdec",
]

resolver = "2"

[profile.release]
lto = true
codegen-units = 1


