[package]
name = "common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib",]
name = "common"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
lazy_static = "1.4"