[package]
name = "liblzma"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.173"
lazy_static = "1.4"
common = { path = "../common" }
num_enum = { version = "0.7.3" }
byteorder = "1.4"